# pyfssa

./: .coveragerc  .gitattributes  .gitignore  .travis.yml  AUTHORS.rst  LICENSE.txt  README.md  README.rst  autodocs.sh  autotest.sh  dodo.py  pytest.ini  requirements-dev.txt  requirements-doc.txt  requirements-rtd.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini  toxdev.ini  version.py
devtools/: cdocs.sh  ctest.sh
docs/: .gitignore  LICENSE  Makefile  about-include.rst  about.rst  automake.sh  changelog.rst  conf.py  developer.rst  fss-theory.rst  index.rst  license.rst  nelder-mead.rst  pyfss.bib  pyfssa.bib  quality.rst  readme.rst  reference-fssa-fssa.rst  reference-fssa.rst  reference.rst  setup.rst  tutorial.ipynb  user.rst  verification.ipynb  version.py  zbib.rst
docs/_static/: bond-percolation-hpc-chain-canonical-averages.hdf5  bond-percolation-hpc-grid-canonical-averages.hdf5  bond_percolation_1d_jugfile.py  bond_percolation_jugfile.py  rst.tpl
fss/: __init__.py  fss.py
fssa/: __init__.py  _version.py  fssa.py  optimize.py
fssa/test/: test_fss.py
tests/: test_fss.py
