[metadata]
description = Scientific Python package for finite-size scaling analysis at phase transitions
author = Andreas Sorge
author_email = pyfssa@asorge.de
license = isc
url = http://pyfssa.readthedocs.org
# Comma separated list of data INSIDE your package to include.
package_data = 
# Comma separated list of data OUTSIDE your package to include.
# Equivalent to adding files to MANIFEST.in which is not needed.
data_files = *.rst, *.txt
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = Development Status :: 3 - Alpha,
              Intended Audience :: Science/Research,
              License :: OSI Approved :: ISC License (ISCL),
              Programming Language :: Python,
              Programming Language :: Python :: 2.7,
              Programming Language :: Python :: 3.4,
              Programming Language :: Python :: 3.5,
              Topic :: Scientific/Engineering :: Mathematics,
              Topic :: Scientific/Engineering :: Physics
